<resources>
    <string name="app_name">Example</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="ingrese_su_email">Ingrese su email</string>
    <string name="ingrese_su_contrase_a">Ingrese su contraseña</string>
    <string name="login_label">Iniciar Sesion</string>
    <string name="registro">Registro</string>
    <string name="ingrese_su_nombre">Ingrese su nombre</string>
    <string name="signup_label">Crear cuenta</string>
    <string name="ya_tienes_cuenta">Ya tienes cuenta ?</string>
    <string name="home_tittle">Inicio</string>
    <string name="product_title">Mis productos</string>
    <string name="comment_title">Comentarios</string>
    <string name="profile_title">Perfil</string>
    <string name="cuenta">Cuenta</string>
    <string name="productos">Productos</string>
    <string name="inicio">Inicio</string>
    <string name="comentarios">Comentarios</string>
    <string name="product_detail_label">Detalle del producto</string>
</resources>